k8/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sample
  labels:
    name: sample
    pod-security.kubernetes.io/enforce: restricted
