k8/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  namespace: sample
spec:
  ports:
  - port: 80
  selector:
    app: sample
